some more work on getting ang to render

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+<!-- get node cdn -->
+<!-- THIS IS THE TEMPLATE HTML? -->
+<html lang="en" ng-app="app">
+  <head>
+    <meta charset="utf-8">
+    <title>Vaguely Usefull Notes</title>
+    <!-- <link rel="stylesheet" hre -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="client.js"></script>
+  </head>
 
+  <header>Hello</header>
 
-<div ng-app="notepad" ng-controller="myCtrl">
-    <ul>
-        <li ng-repeat="x in products">{{x}}</li>
-    </ul>
-    <input ng-model='newNote'>
-    <button> ng-click='addNote()'>U Sure?</button>
-</div>
+  <body>
+  <div ng-app="notepad" ng-controller="myCtrl">
+      <ul>
+          <li ng-repeat="x in products">{{x}}</li>
+      </ul>
+      <input ng-model='newNote'>
+      <button> ng-click='addNote()'>U Sure?</button>
+  </div>
+</body>
