working on posting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
           <li ng-repeat="x in products">{{x}}</li>
       </ul>
       <input ng-model='newNote'>
-      <button> ng-click='addNote()'>U Sure?</button>
+      <button ng-click='addNote()'>U Sure?</button>
   </div>
 </body>
