updates to handle errors with get and post. still no db integration

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!-- get node cdn -->
 <!-- THIS IS THE TEMPLATE HTML? -->
-<html lang="en" ng-app="app">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Vaguely Usefull Notes</title>
     <!-- <link rel="stylesheet" hre -->
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
     <script src="client.js"></script>
   </head>
 
-  <header>Hello</header>
+  <header>World's Least Reliable Note App</header>
 
   <body>
-  <div ng-app="notepad" ng-controller="myCtrl">
+  <div ng-app="notepad" ng-controller="mainController">
       <ul>
           <li ng-repeat="x in products">{{x}}</li>
       </ul>
       <input ng-model='newNote'>
-      <button ng-click='addNote()'>U Sure?</button>
+      <button type="submit" ng-click='addNote()'>U Sure?</button>
   </div>
 </body>
