Server working to save hello world :D, now connecting it to inputted text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
           <li ng-repeat="x in products">{{x}}</li>
       </ul>
-      <input ng-model='newNote'>
+      <input ng-model='textToPost.text'>
       <button type="submit" ng-click='addNote()'>U Sure?</button>
   </div>
 </body>
